# squaresdb

./: .gitignore  .readthedocs.yaml  Makefile  README.md  manage.py  mypy.ini  package-lock.json  package.json  pylintrc.ini  pyproject.toml  setup.py  shell.nix  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/workflows/: main.yaml
ansible/: .gitignore  inventory.yaml  playbook.yaml
ansible/roles/squaresdb/files/: google-oauth.json  listpass.challenge.txt  listpass.main.txt  saml.crt  saml.key
ansible/roles/squaresdb/tasks/: main.yaml
ansible/roles/squaresdb/templates/: django_local.py.j2  vhost.conf
ansible/vault/: README.md
docs/: Makefile  conf.py  django.rst  index.rst  installing.rst  requirements.txt
react/: index.tsx
squaresdb/: settings.py  urls.py  wsgi.py
squaresdb/gate/: admin.py  apps.py  forms.py  models.py  sample.json  tests.py  urls.py  views.py
squaresdb/gate/fixtures/: sample.json  squares.json
squaresdb/gate/migrations/: 0001_initial.py  0002_paymentmethod.py  0003_add_signin_app_perm.py  0004_prices.py  0005_books_perm_and_notes.py  0006_add_perms.py  0007_add_prices.py  0008_attendee_time.py  0009_add_price_2023.py  0010_AnnoPerson.py  0011_autofield.py  0012_online_payments.py  0012_payments.py  0012_subscriptionlineitem.py  0013_payments_more_fields.py  0014_payments_more_fields.py  0015_payments_more_fields.py  0016_payments_more_fields.py  0017_pay_rename_subscriber.py  0018_pay_nonce.py  0019_pay_products.py
squaresdb/mailinglist/: admin.py  apps.py  backend.py  mmblanche  models.py  tests.py  views.py
squaresdb/mailinglist/fixtures/: squares.json
squaresdb/mailinglist/migrations/: 0001_initial.py
squaresdb/membership/: admin.py  apps.py  docs.txt  mailinglist.py  models.py  parsedb.py  schema.txt  tests.py  urls.py  views.py
squaresdb/membership/fixtures/: people.json
squaresdb/membership/migrations/: 0001_initial.py  0002_member_choices.py  0003_personauthlink.py  0004_add_view_person_perm.py  0005_add_on_delete.py  0006_allow_unknown_creator.py  0007_user_author.py  0008_personfreq.py  0009_alter_personauthlink_create_reason_basic.py  0010_autofield.py
squaresdb/money/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
squaresdb/money/migrations/: 0001_initial.py  0001_online_payments.py  0002_product_order.py  0002_transaction_user.py  0003_alter_lineitem_amount_alter_product_high_and_more.py
squaresdb/settings/: __init__.py  init-dev.sh  local.dev-template.py  mitshib.crt  saml_decode.py  samltest.crt  testshib.crt  tscollab.crt
squaresdb/templates/: base.html  hello_webpack.html  index.html  sp.html
squaresdb/templates/registration/: logged_out.html  login.html
squaresdb/utils/: email.py  install.py  mmblanche  scripts.tmpl.fcgi  socialauth.py
static/libs/: bootstrap4  popper.js
static/style/: style.css
(+41 files in other folders)
